<resources>
    <string name="app_name">craft creatures</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number_">Enter Number</string>
    <string name="enter_number">Enter Contact Number</string>
    <string name="jobtitle">Job Title</string>
    <string name="salary">Salary</string>
    <string name="email">Email Address</string>
    <string name="err_name" >Invallid Fotmat</string>
    <string name="err_tel" >Invallid Fotmat</string>
    <string name="err_email" >Invallid Fotmat</string>
    <string name="err_qu">Invallid Fotmat</string>
    <string name="err_unip">Invallid Fotmat</string>
    <string name="err_buy">Invallid Fotmat</string>
    <string name="err_cname">Invallid Fotmat</string>
    <string name="err_sell">Invallid Fotmat</string>
    <string name="err_addre">Invallid Fotmat</string>
    <string name="err_ap">Invallid Fotmat</string>
    <string name="err_sp">Invallid Fotmat</string>
    <string name="err_prof">Invallid Fotmat</string>
    <string name="err_sto">Invallid Fotmat</string>
    <string name="err_cat">Invallid Fotmat</string>
    <string name="err_des">Invallid Fotmat</string>
    <string name="err_amou">Invallid Fotmat</string>
    <string name="bSalary">Invallid Fotmat</string>
    <string name="err_emp">Invalid Input</string>
    <string name="err_maker">Invalid Input</string>
</resources>