<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp"
        android:inputType="text"
        android:background="@drawable/br_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/enter_phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/br_border"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/jobtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/br_border"
        android:hint="@string/jobtitle"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/br_border"
        android:hint="@string/salary"
        android:inputType="number"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/br_border"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBorder"
        android:textSize="16dp"
        tools:ignore="TextFields" />

</LinearLayout>